<resources>
    <string name="app_name">message</string>

    <string name="call_number"> 拨号号码：%1$s </string>
    <string name="call_name"> 拨号人名称：%1$s </string>
    <string name="receiver_number"> 接收号码：%1$s </string>
    <string name="call_time">最近通话：%1$s </string>
    <string name="address"> 拨号人地址：%1$s </string>
    <string name="times"> 共 %1$d 次 </string>
    <string name="total_time"> 通话总时长：%1$s </string>
    <string name="single_time"> 通话时长：%1$s </string>
    <string name="dial_times"> 拨打 %1$d 次数 </string>
    <string name="receiver_times"> 接通 %1$d 次 </string>
    <string name="missed_times"> 未接 %1$d 次 </string>
    <string name="refuse_times"> 拒接 %1$d 次 </string>
    <string name="title_activity_welcome">interest</string>
    <string name="action_settings">Settings</string>
    <string name="joiner"> ~ &#160; %1$s</string>

    <string-array name="musicList">
        <item>本地音乐</item>
        <item>最近播放</item>
        <item>云盘音乐</item>
        <item>下载管理</item>
        <item>我喜欢的音乐</item>
    </string-array>

    <string name="back">返回</string>
    <string name="play">播放</string>
    <string name="playing">正在播放…</string>
    <string name="pause">暂停</string>
    <string name="previous">上一首</string>
    <string name="next">下一首</string>
    <string name="play_list">播放列表</string>
    <string name="play_type">播放类型</string>
    <string name="play_music">播放音乐</string>
    <string name="no_play_music">暂无播放音乐</string>

    <string name="local_music">本地音乐</string>
    <string name="search">搜索</string>
    <string name="close_search">关闭搜索</string>
    <string name="search_local_music">搜索本地音乐</string>


    <string name="listening_to_songs">听歌排行</string>
    <string name="cloud_music_list">云盘音乐列表</string>
    <string name="recent_play">最近播放</string>
    <string name="recent_one_week">最近一周</string>
    <string name="recent_all_time">所有时间</string>

    <string name="recent_play_time">播放时间：[value]</string>
    <string name="recent_play_count">播放次数：[value] 次</string>

    <string name="ascending">升序</string>
    <string name="descending">降序</string>
    <string name="delete_successful">删除成功</string>

    <string name="no_music">暂无音乐</string>

    <string name="download_manage">下载管理</string>


</resources>
