<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="playMusicViewModel"
            type="com.dai.message.ui.music.playmusic.PlayMusicViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:orientation="vertical"
        tools:context=".ui.music.playmusic.PlayMusicFragment">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/colorWhite">

            <ImageView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:background="@mipmap/icon_leaf_original_64" />

            <TextView
                android:id="@+id/songName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/back"
                android:layout_marginStart="19dp"
                android:layout_marginLeft="19dp"
                android:layout_marginTop="-8dp"
                android:layout_toEndOf="@+id/back"
                android:layout_toRightOf="@+id/back"
                android:text="歌曲名称"
                android:textColor="@color/orange"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/back"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="61dp"
                android:layout_marginLeft="61dp"
                android:text="12354"
                android:textSize="12sp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/orange" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"></LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/orange" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/colorWhite"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/play_type"
                style="@style/musicTitle"
                android:drawableTop="@mipmap/icon_lemon_original_64"
                android:text="@string/play_type" />

            <TextView
                android:id="@+id/previous"
                style="@style/musicBottomTitle"
                android:drawableTop="@mipmap/icon_mushroom_original_64"
                android:text="@string/previous" />

            <TextView
                android:id="@+id/play"
                style="@style/musicBottomTitle"
                android:drawableTop="@mipmap/icon_peach_original_64"
                android:text="@string/play" />

            <TextView
                android:id="@+id/next"
                style="@style/musicBottomTitle"
                android:drawableTop="@mipmap/icon_pear_original_64"
                android:text="@string/next" />

            <TextView
                android:id="@+id/play_list"
                style="@style/musicBottomTitle"
                android:drawableTop="@mipmap/icon_pipa_original_64"
                android:text="@string/play_list" />
        </LinearLayout>
    </LinearLayout>
</layout>