<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:background="@color/colorWhite"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/music_title_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:background="@mipmap/icon_back_orange_64"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/music_relative"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_weight="1"
        android:background="@color/colorWhite"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/music_title_avatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@mipmap/icon_leaf" />

        <TextView
            android:id="@+id/music_title_song_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/music_title_avatar"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_toEndOf="@id/music_title_avatar"
            android:layout_toRightOf="@id/music_title_avatar"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/app_name"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/music_title_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/music_title_song_name"
            android:layout_alignStart="@+id/music_title_song_name"
            android:layout_alignLeft="@+id/music_title_song_name"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:padding="2dp"
            android:text="@string/app_name"
            android:textColor="@color/tabBackground"
            android:textSize="12sp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/music_title_play"
        style="@style/TitleBar"
        android:drawableTop="@mipmap/icon_peach_original_64"
        android:text="@string/play" />

    <TextView
        android:id="@+id/music_title_play_list"
        style="@style/TitleBar"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:drawableTop="@mipmap/icon_pipa_original_64"
        android:text="@string/play_list" />

</LinearLayout>