<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:layout_gravity="center_vertical"
    android:background="@color/colorWhite"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/top_title_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:background="@mipmap/icon_back_orange_64" />


    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <RelativeLayout
            android:id="@+id/top_song_info"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:visibility="gone"
            tools:ignore="RtlSymmetry">

            <TextView
                android:id="@+id/top_song_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/top_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/top_song_name"
                android:layout_alignStart="@+id/top_song_name"
                android:layout_alignLeft="@+id/top_song_name"
                android:ellipsize="end"
                android:maxLines="1"
                android:padding="2dp"
                android:textColor="@color/tabBackground"
                android:textSize="12sp" />

            <ImageView
                android:id="@+id/top_shared"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/top_author"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="5dp"
                android:background="@mipmap/icon_tomato_original_64" />

        </RelativeLayout>

        <TextView
            android:id="@+id/top_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:gravity="center"
            android:text="@string/local_music"
            android:textSize="20sp"
            android:visibility="gone" />

        <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:layout_marginStart="20dp"-->
        <!--android:layout_marginLeft="20dp"-->
        <!--android:orientation="horizontal"-->
        <!--android:layout_toStartOf="@+id/top_search"-->
        <!--android:layout_toLeftOf="@+id/top_search">-->
        <EditText
            android:id="@+id/top_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_toStartOf="@+id/top_search"
            android:layout_toLeftOf="@+id/top_search"
            android:background="@null"
            android:hint="@string/search_local_music"
            android:paddingStart="5dp"
            android:paddingLeft="5dp"
            android:visibility="gone"
            tools:ignore="NestedWeights,RtlSymmetry" />
        <!--</LinearLayout>-->


        <TextView
            android:id="@+id/top_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_toStartOf="@+id/top_setting"
            android:layout_toLeftOf="@+id/top_setting"
            android:drawableTop="@mipmap/icon_leaf"
            android:gravity="center"
            android:text="@string/search"
            android:textSize="10sp"
            android:visibility="gone"
            tools:ignore="RtlHardcoded,SmallSp" />

        <ImageView
            android:id="@+id/top_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:background="@mipmap/more"
            android:visibility="gone" />

    </RelativeLayout>
</LinearLayout>